# pelit

./: .gitignore  Containerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: podman.yaml
examples/: compose.yml  config.example.toml  gunicorn.conf.py  pelit.conf  pelit.toml
src/: wsgi.py
src/pelit/: app.py  route.py
src/pelit/p_types/: schemas.py
src/pelit/plib/: arg.py  config.py  log.py  result.py  route_tool.py
src/tools/: pelit
